# Code-ZYJ

xjsd-face-tnn-feature-linux-sdk/: .gitignore  CMakeLists.txt  README.md  commit_template.ini
xjsd-face-tnn-feature-linux-sdk/include/: XJFace.h
xjsd-face-tnn-feature-linux-sdk/modules/: CMakeLists.txt
xjsd-face-tnn-feature-linux-sdk/modules/alignment/: CMakeLists.txt  alignment.cpp  alignment.h
xjsd-face-tnn-feature-linux-sdk/modules/detector/: CMakeLists.txt  detector.cpp  detector.h  retina_face_detector.cpp  retina_face_detector.h  sample_timer.cpp  sample_timer.h  yuv420sp_to_rgb_fast_asm.h
xjsd-face-tnn-feature-linux-sdk/modules/faceManager/: CMakeLists.txt  XJFace.cpp  XJFaceImpl.cpp  XJFaceImpl.h
xjsd-face-tnn-feature-linux-sdk/modules/faceManager-jni/: CMakeLists.txt  nativelib.cpp
xjsd-face-tnn-feature-linux-sdk/modules/faceManager-jni/linux-jar/: README.md  settings.gradle
xjsd-face-tnn-feature-linux-sdk/modules/faceManager-jni/linux-jar/src/main/java/com/linux/face/: NativeLib.java  XJFace.java  XJFaceBoxInfo.java  XJImage2D.java  XJPointF.java  XJRectF.java  XJUtil.java
xjsd-face-tnn-feature-linux-sdk/modules/kfTrack/: CMakeLists.txt  Hungarian.cpp  Hungarian.h  opticalFlow.hpp  track.cpp  track.h
xjsd-face-tnn-feature-linux-sdk/modules/recognizer/: CMakeLists.txt  MobileFace.cpp  MobileFace.h
xjsd-face-tnn-feature-linux-sdk/modules/spoofjudger/: CMakeLists.txt  classifier.cpp  classifier.h  ssan_r_spoof_judger.cpp  ssan_r_spoof_judger.h
xjsd-face-tnn-feature-linux-sdk/modules/yolo/: CMakeLists.txt  Yolov5.cpp  Yolov5.h
xjsd-face-tnn-feature-linux-sdk/script/: build_linux_native.sh
xjsd-face-tnn-feature-linux-sdk/test/: CMakeLists.txt  alignment_test.cpp  detector_test.cpp  faceManager_test.cpp  kfTrackTest.cpp  recognizer_test.cpp  spoofJudger_test.cpp  yolo_test.cpp
xjsd-face-tnn-feature-linux-sdk/third_part/json/rapidjson/: rapidjson.h
xjsd-face-tnn-feature-linux-sdk/tools/: android.toolchain.cmake  android_cmake_build.py  face_alignment.py
xjsd-face-tnn-feature-linux-sdk/utility/: Alarmer.cpp  Alarmer.h  CMakeLists.txt  Clock.cpp  Clock.h  FileUtil.cpp  FileUtil.h  OrderMap.h  TNNKit.cpp  TNNKit.h  Timer.cpp  Timer.h  Tree.cpp  Tree.h
xjsd-face-tnn-feature-linux-sdk/utility/xlog/: XLog.cpp  XLog.h  platform.cpp  platform.h
